<resources>
    <string name="app_name">TutaDriver</string>
    <string name="welcome_to_tuta_driver">Welcome to Tuta Driver</string>
    <string name="register_here">Register here</string>
    <string name="by_proceeding_i_agree_to_the_tuta_terms_and_conditions">
        <font color="#092D4B">By proceeding I agree to the Tuta</font>
        <font color="#6C63FF">Terms and conditions</font>
    </string>
    <string name="by_proceeding_i_agree_to_the_tuta_terms_and_conditions_payment">
        <font color="#ffffff">By proceeding I agree to the Tuta</font>
        <font color="#6C63FF">Terms and conditions</font>
    </string>
    <string name="phone_number">Phone number</string>
    <string name="verify">Verify</string>
    <string name="verification">Verification</string>
    <string name="enter_the_pin_sent_to_you_phone_number_to_verify_your_account">Enter the pin sent to you phone number to verify your account</string>
    <string name="didn_t_receive_an_sms">Didn\'t receive an SMS?</string>
    <string name="resend">Resend</string>
    <string name="be_you_r_own_boss">Be your own Boss</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hello_there">Hello there!</string>
    <string name="don_t_have_an_existing_n_account">Don\'t have an Existing\naccount?</string>
    <string name="_254_701980075">+254 701980075</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_your_tuta_n_account">Create your Tuta \n Account</string>
    <string name="email_address">Email address</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="upload_the_personal_documents">Upload the personal documents</string>
    <string name="passport_id_card">Passport/ID Card</string>
    <string name="upload">UPLOAD</string>
    <string name="add_vehicle_image_1">Add vehicle image 1</string>
    <string name="birth_certificate">Birth Certificate</string>
    <string name="add_vehicle_image_2">Add vehicle image 2</string>
    <string name="driving_licensce">Driving Licensce</string>
    <string name="set_up_payment_next">Set up payment -Next</string>
    <string name="finish">Finish</string>
    <string name="card_number">Card number</string>
    <string name="expires">Expires</string>
    <string name="cvc">CVC</string>
    <string name="set_up_your_payment">Set up your payment</string>
    <string name="dedan_kimathi">Dedan Kimathi</string>
    <string name="_0">0</string>
    <string name="zar">Zar</string>
    <string name="earned">EARNED</string>
    <string name="todo">TODO</string>
    <string name="join_tuta">Join Tuta</string>
    <string name="log_in">Log in</string>
    <string name="_254_phone_number">
        <font color="#9A9A9A">+254</font>
        <font color="#ACD0EF">|</font>
        <font color="#9A9A9A">Phone Number</font>
    </string>
    <string name="join_us_to_grow_with_us">Join Us To Grow With Us</string>
    <string name="you_have_no_rides_yet_n_get_ready_to_move_with_tuta">You have no rides yet,\n Get ready to move with Tuta</string>
    <string name="pick_up_date_and_time">Pick up Date and Time</string>
    <string name="_8_park_johannesburg">8 Park, Johannesburg</string>
    <string name="to">To</string>
    <string name="right_now">Right now</string>
    <string name="from">From</string>
    <string name="_228_ave_park_santon">228 Ave Park, Santon...</string>
    <string name="time_3hrs">Time 3hrs</string>
    <string name="accept_request">Accept Request</string>
    <string name="distance_12_km">Distance 12 km</string>
    <string name="_810">810</string>
    <string name="reject">Reject</string>
    <string name="julius_nyerere">Julius Nyerere</string>
    <string name="order_details">Order details</string>
    <string name="client">Client</string>
    <string name="vehicle_reg_no">Vehicle Reg No.</string>
    <string name="tuta_s">Tuta S</string>
    <string name="select_your_vehicle">Select your Vehicle</string>
    <string name="add_your_vehicle_ndetails">Add your vehicle \ndetails</string>
    <string name="tuta_m">Tuta M</string>
    <string name="tuta_l">Tuta L</string>
    <string name="start_moving">Start moving</string>
    <string name="call_client">Call Client</string>
    <string name="loading_help">Loading help</string>
    <string name="message_client">Message Client</string>
    <string name="the_client_will_need_loading_help">The client will need Loading help</string>
    <string name="glass_table">Glass table</string>
    <string name="fragile_items">Fragile items</string>
    <string name="the_client_will_need_packing_help">The client will need packing help</string>
    <string name="packing_help">Packing help</string>
    <string name="start_moving_to_track_after_loading_is_done">Start moving to track after loading is done</string>
    <string name="this_items_require_special_packaging">This items require special packaging</string>
    <string name="sculpture">Sculpture</string>
    <string name="finish_moving">Finish moving</string>
    <string name="error_msg_otp">Sorry an error occurred getting the OTP, please try again</string>
    <string name="error_msg_verify_otp">Sorry an error occurred while verifying OTP, please try again</string>
    <string name="error_no_internet">Please check your internet connection</string>
</resources>